Made User.html contents align in the center and fix the navigation to sign up in index.html

--- a/Auth/User.css
+++ b/Auth/User.css
@@ -96,8 +96,8 @@ button {
 .popupCloseButton:hover {
   background-color: #ccc;
 }
-.trigger-popup-fricc {
-  margin-left: 46.5%;
+.trigger-button {
+  text-align: center;
 }
 .hover_bkgr_fricc1 {
   background: rgba(0, 0, 0, 0.4);
@@ -133,7 +133,9 @@ button {
   text-align: center;
 } */
 #data-list {
-  margin-left: 41.5%;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
   text-align: center;
 }
 .edit {
