--- a/Auth/style.css
+++ b/Auth/style.css
@@ -4,9 +4,12 @@ body {
   height: 100%;
   min-height: 100%;
 }
+a {
+  color: pink;
+}
 .outer-container {
   color: white;
-  margin-top: 11%;
+  margin-top: 7%;
   text-align: center;
 }
 button {
